# docuisine

./: .coveragerc  .env.dev.example  .env.example  .gitignore  404.html  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  index.html  objects.inv  pyproject.toml  requirements.txt  vercel.json
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: 2-request.yml
.github/ISSUE_TEMPLATES/: documentation.yml  request.yml
.github/workflows/: docs.yml  lint-and-unit-test.yml
docs/: mkdocs.yml
docs/docs/: index.md
docs/docs/about/: license.md
docs/docs/assets/: branding.css
docs/docs/assets/branding/: docuisine-typography.psd  docuisine.psd
docs/docs/assets/user-guide/: .env.example  docker-compose.yml
docs/docs/contributing/: branding.md  development.md  index.md
docs/docs/contributing/artifacts/: branding.md  database.md  style-guides.md
docs/docs/contributing/development/: backend.md  frontend.md  index.md
docs/docs/user-guide/: index.md  installation.md
docuisine/: main.py
docuisine/core/: config.py
docuisine/db/: database.py
docuisine/db/models/: __init__.py  base.py  categories.py  ingredients.py  recipes.py  stores.py  user.py
docuisine/dependencies/: __init__.py  auth.py  services.py
docuisine/routes/: __init__.py  auth.py  category.py  health.py  image.py  ingredient.py  recipe.py  root.py  store.py  user.py
docuisine/schemas/: __init__.py  annotations.py  auth.py  category.py  common.py  enums.py  health.py  image.py  ingredient.py  recipe.py  store.py  user.py
docuisine/services/: __init__.py  category.py  image.py  ingredient.py  recipe.py  store.py  user.py
docuisine/utils/: hashing.py  validation.py
docuisine/utils/errors/: __init__.py  auth.py  category.py  recipe.py  store.py  user.py
getting-started/: index.html
references/architecture/: database.md
scripts/debug/: debug_user_creation.py  debug_user_service.py
scripts/dev/: .env.example  Dockerfile  docker-compose.yml
scripts/dev/init/: 0-schema.sql  1-inserts.sql  schema.sql
search/: search_index.json
tests/: test_code.py
tests/core/: test_config.py
tests/db/: test_config.py
tests/e2e/: test_main.py
tests/integration/api/: test_user_api.py
tests/integration/routes/: test_health_route.py
tests/unit/: conftest.py
tests/unit/core/: test_config.py
tests/unit/db/: test_database.py
tests/unit/routes/: test_auth_route.py  test_category_route.py  test_ingredient_route.py  test_recipe_route.py  test_store_route.py  test_user_route.py  test_user_route_unit.py
tests/unit/routes/auth/: params.py  test_auth_route_public.py
tests/unit/routes/category/: params.py  test_category_route.py
tests/unit/routes/health/: test_health_route_admin.py  test_health_route_all.py
tests/unit/routes/ingredient/: params.py  test_ingredient_route.py
tests/unit/routes/recipe/: params.py  test_recipe_route.py
tests/unit/routes/root/: test_root_route.py  test_root_route_all.py  test_root_route_public.py  test_root_route_user.py
tests/unit/routes/store/: params.py  test_store_route.py
tests/unit/routes/user/: params.py  test_user_route.py
tests/unit/services/: test_category_service.py  test_image_service.py  test_recipe_service.py  test_store_service.py  test_user.py  test_user_service.py
tests/unit/utils/: test_hashing.py  test_validation.py
tests/utils/: test_validation.py
