[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "docuisine"
version = "0.0.1"
description = "Backend for the Docuisine application."
authors = [
  { name = "Chris Irag", email = "irag.chrisandrei@mailbox.org"},
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = [
    "fastapi[standard]>=0.121.1",
    "mkdocs",
    "mkdocs-material>=9.6.23",
    "mkdocstrings[python]>=0.30.1",
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
]
requires-python = ">=3.13.0"


[tool.ruff]
line-length = 99
src = ["docuisine"]
include = ["pyproject.toml", "docuisine/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["docuisine"]
force-sort-within-sections = true

