[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "docuisine"
version = "0.0.2"
description = "Backend for the Docuisine application."
authors = [
  { name = "Chris Irag", email = "iragca@pm.me"},
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = [
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.121.1",
    "mkdocs",
    "mkdocs-material>=9.6.23",
    "mkdocstrings[python]>=0.30.1",
    "neoteroi-mkdocs[mkdocsoad]>=1.2.0",
    "pip",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.4",
    "python-dotenv",
    "sqlalchemy>=2.0.45",
]
requires-python = ">=3.13.0"


[tool.ruff]
line-length = 99
src = ["docuisine"]
include = ["pyproject.toml", "docuisine/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["docuisine"]
force-sort-within-sections = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.9",
    "ty>=0.0.2",
]

[tool.pytest.ini_options]
addopts = "--cov-config=.coveragerc --cov=docuisine tests/ --cov-report html"
